Fixed coming soon banner for both light and dark mode, reworked hover

--- a/components/Generic/LinkHover/linkhover.module.scss
+++ b/components/Generic/LinkHover/linkhover.module.scss
@@ -59,11 +59,15 @@
   }
 }
 
-.light .hover-text {
-  background: $light-mode-secondary;
-  color: white;
-}
+// .light .hover-text {
+//   background: $light-mode-secondary;
+//   color: white;
+// }
 
-.wrapper:hover .hover-text {
-  display: block;
-}
+// .wrapper:hover .hover-text {
+//   display: block;
+// }
+
+// .wrapper:focus .hover-text {
+//   display: block;
+// }
