--- a/components/Navbar/navbar.module.scss
+++ b/components/Navbar/navbar.module.scss
@@ -121,36 +121,41 @@
   cursor: pointer;
 }
 
-.community {
-  @include lg {
-    font-size: 0.625rem !important;
-    // transform: translateY(-1.5rem);
-    margin: -1.75rem 0 0.5rem;
-    border-radius: 4px;
-    padding: 0 1rem 1.35rem 0.36rem;
-    background: rgba($color: #000000, $alpha: 0.75);
-  }
-
-  @include xl {
-    font-size: 0.75rem !important;
-  }
-}
-
+.community,
 .partners {
-  @include lg {
-    font-size: 0.625rem !important;
-    transform: translateY(-1.5rem);
-    margin: -1.5rem 0 0.5rem;
-    border-radius: 4px;
-    background: rgba($color: #000000, $alpha: 0.75);
-    padding: 0 0 0 0.4rem;
-  }
-
-  @include xl {
-    font-size: 0.75rem !important;
-    // padding: 0 2.7rem 0.5rem 0.4rem;
-  }
+  color: gray !important;
 }
+
+// .community {
+//   @include lg {
+//     font-size: 0.625rem !important;
+//     // transform: translateY(-1.5rem);
+//     margin: -1.75rem 0 0.5rem;
+//     border-radius: 4px;
+//     padding: 0 1rem 1.35rem 0.36rem;
+//     // background: rgba($color: #000000, $alpha: 0.75);
+//   }
+
+//   @include xl {
+//     font-size: 0.75rem !important;
+//   }
+// }
+
+// .partners {
+//   @include lg {
+//     font-size: 0.625rem !important;
+//     transform: translateY(-1.5rem);
+//     margin: -1.5rem 0 0.5rem;
+//     border-radius: 4px;
+//     // background: rgba($color: #000000, $alpha: 0.75);
+//     padding: 0 0 0 0.4rem;
+//   }
+
+//   @include xl {
+//     font-size: 0.75rem !important;
+//     // padding: 0 2.7rem 0.5rem 0.4rem;
+//   }
+// }
 
 .boards-wrapper {
   position: relative;
@@ -163,15 +168,6 @@
   left: -0.5rem;
   background: rgba($color: #000000, $alpha: 0.75);
   padding: 1rem 0;
-
-  @include lg {
-    top: 2.15rem;
-  }
-
-  @include xl {
-    top: 2.4rem;
-    padding: 1rem 0;
-  }
 }
 
 .light .boards-wrapper > div {
@@ -182,6 +178,11 @@
   display: grid;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
+  padding: 1.35rem 0.67rem 0.5rem;
+
+  @include xl {
+    padding: 1.75rem 0.67rem 0.4rem;
+  }
 }
 
 .boards-wrapper > div > span {
@@ -189,16 +190,9 @@
 
   @include lg {
     display: block;
-
+    padding: 0.075rem 0;
     border-radius: 0;
-    font-size: 0.8rem !important;
-    transform: translateY(1.5rem);
-  }
-}
-
-.boards-wrapper > div > span:last-child {
-  @include xl {
-    padding: 0.25rem 0 1rem;
+    transform: translateY(0.2px);
   }
 }
 
@@ -567,4 +561,25 @@
   @include md {
     // transform: translate(-2px, -1px) !important;
   }
+}
+
+.banner {
+  white-space: nowrap;
+
+  @include lg {
+    padding: 0 1rem;
+    position: absolute;
+    border-radius: 4px !important;
+    transform: translateY(-50%);
+    padding: 0.15rem 0.386rem !important;
+    z-index: 3;
+    min-width: max-content;
+    cursor: pointer;
+    border-radius: 4px;
+    background: $ln-blue;
+  }
+}
+
+.light .banner {
+  color: white !important;
 }
